Closed Bug 1317513 Opened 8 years ago Closed 8 years ago

Crash in mozilla::gfx::DeviceManagerDx::HasDeviceReset

Categories

(Core :: Graphics, defect)

Unspecified
Windows 10
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla53
Tracking Status
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: marcia, Assigned: dvander)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is 
report bp-0b6ed243-a229-4a7c-ba1b-28cc72161114.
=============================================================

Seen while looking at crash stats - crashes started happening with 20161114030203 and have continued into 53. 

Maybe this is expected as there were some recent changes made in this area? ni on dvander.
Flags: needinfo?(dvander)
Blocks: 1316690
Flags: needinfo?(dvander)
Attached patch bug1317513.patchSplinter Review
Whoops. Forgot to null-check the outparam.
Assignee: nobody → dvander
Status: NEW → ASSIGNED
Attachment #8810638 - Flags: review?(rhunt)
Attachment #8810638 - Flags: review?(rhunt) → review+
Pushed by danderson@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/039eb9887533
Add missing null check in DeviceManagerDx::HasDeviceReset. (bug 1317513, r=rhunt)
https://hg.mozilla.org/mozilla-central/rev/039eb9887533
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
David, as this still affects aurora could you do an uplift request?  Thanks.
Flags: needinfo?(dvander)
Comment on attachment 8810638 [details] [diff] [review]
bug1317513.patch

Approval Request Comment
[Feature/regressing bug #]: bug 1316690
[User impact if declined]: Potential crashes when using D3D11
[Describe test coverage new/current, TreeHerder]: Nightly
[Risks and why]: No risk, harmless missing null check
[String/UUID change made/needed]:
Flags: needinfo?(dvander)
Attachment #8810638 - Flags: approval-mozilla-aurora?
Comment on attachment 8810638 [details] [diff] [review]
bug1317513.patch

fix a null dereference in aurora52
Attachment #8810638 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
This crash has disappeared in the Aurora 20161123004021 build, as expected.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: