Bug 1317513 - Add missing null check in DeviceManagerDx::HasDeviceReset. (bug 1317513, r=rhunt, a=jcristau